# cpp_craft_1013

solutions/a_ver/task_2/lib/: CMakeLists.txt
solutions/a_ver/task_3/: CMakeLists.txt
solutions/a_ver/task_3/bad_channel/: CMakeLists.txt  main.cpp
solutions/a_ver/task_3/emulation_queues/: CMakeLists.txt  main.cpp
solutions/a_ver/task_3/split_datafeed/: CMakeLists.txt  main.cpp
solutions/a_ver/task_4/: CMakeLists.txt
solutions/a_ver/task_4/4_4/: CMakeLists.txt  a_message.cpp  b_message.cpp
solutions/a_ver/task_4/4_5/: solution.cpp  solution.h
solutions/a_ver/task_4/tests/: CMakeLists.txt
solutions/a_ver/task_4/tests/4_4_tests/: CMakeLists.txt
solutions/a_ver/task_4/tests/4_5_tests/: CMakeLists.txt
solutions/a_ver/task_4/tests/4_6_tests/: CMakeLists.txt
